Tests variable nesting in `{{md}}`

--- a/src/patterns/templates/foo.handlebars
+++ b/src/patterns/templates/foo.handlebars
@@ -11,9 +11,13 @@
 It works! 
   
 {{#md}}
+  
 # This is a test
 
 This should be *markdown*.
+  
+This should be equal to `bar` in the query string: {{bar}}
+  
 {{/md}}
 
 {{{md content}}}
