Adds support for partials

--- a/src/patterns/templates/foo.handlebars
+++ b/src/patterns/templates/foo.handlebars
@@ -22,5 +22,9 @@ This should be equal to `bar` in the query string: {{bar}}
 
 {{{md content}}}
   
+{{> molecules-bar}}
+  
+{{> atoms-baz}}
+  
 </body>
 </html>
