Adds support for partial data files
Adds support for data files for included partials by passing all data from non-used files into the context of the base file as supplemental data (using the files path as the object key). This allows the use of the data either by assigning the data context of the included partial with a `lookup` helper or by using the supplemental data in a `with` block.

--- a/src/patterns/templates/home.handlebars
+++ b/src/patterns/templates/home.handlebars
@@ -8,13 +8,15 @@
 </head>
 <body>
 
+{{> organisms-header}}
+  
 <h1>Home Template</h1>
   
 This is the home page template.
   
 {{#md}}
 
-It's able to display **markdown**.
+It's able to display inline **markdown**.
   
 {{/md}}
   
