Add support for global data files
Adds support for global data files via a `global/` folder. All global data files will be loaded first and pattern-specific files will be loaded after to enable overwriting.

--- a/src/patterns/organisms/header.handlebars
+++ b/src/patterns/organisms/header.handlebars
@@ -1,5 +1,9 @@
 <header>
 
+  {{#with (lookup this 'header.json')}}
+    This is the <strong>{{title}}</strong>.
+  {{/with}}
+  
   {{> organisms-nav}}
   
 </header>
