Removes reading of all data file
Removes reading of non-used partial data files into the data object, which could negatively impact performance in the long-run. Instead, use global data files, which is consistent with Pattern Lab.

--- a/src/patterns/organisms/header.handlebars
+++ b/src/patterns/organisms/header.handlebars
@@ -1,8 +1,6 @@
 <header>
 
-  {{#with (lookup this 'header.json')}}
-    This is the <strong>{{title}}</strong>.
-  {{/with}}
+    This is the <strong>{{header.title}}</strong>.
   
   {{> organisms-nav}}
   
