Restructures the templating engine
- Adds Cache, Router, Template, and Data classes
- Renames Route class to Endpoint
- Frees up Route class for use with the Router
- Cleans up library functions
- Refreshes templates
- Adds `dump` helper for debugging
- Moves meta location to `data` folder

--- a/src/patterns/organisms/header.handlebars
+++ b/src/patterns/organisms/header.handlebars
@@ -1,6 +1,6 @@
 <header>
 
-    This is the <strong>{{header.title}}</strong>.
+    This is the <strong>{{__global__.header.title}}</strong>.
   
   {{> organisms-nav}}
   
