--- a/src/patterns/__environment__/10-tokens/text.hbs
+++ b/src/patterns/__environment__/10-tokens/text.hbs
@@ -1,3 +1,7 @@
-<{{#if markdown}}div{{else}}p{{/if}} class="text -{{default type 'body'}}{{#and alternate (eq type 'body')}}-alt{{/and}}">
-  {{#if markdown}}{{#markdown}}{{text}}{{/markdown}}{{else}}{{text}}{{/if}}
-<{{#if markdown}}div{{else}}p{{/if}}>
+<{{#if markdown}}div{{else}}p{{/if}} class="text -{{default type 'body'}}{{#and alternate (eq type 'body')}}-alt{{/and}}{{#if classes}} {{classes}}{{/if}}">
+  {{#if rich}}
+    {{#if markdown}}{{#markdown}}{{{text}}}{{/markdown}}{{else}}{{{text}}}{{/if}}
+  {{else}}
+    {{#if markdown}}{{#markdown}}{{text}}{{/markdown}}{{else}}{{text}}{{/if}}
+  {{/if}}
+</{{#if markdown}}div{{else}}p{{/if}}>
