--- a/src/patterns/__environment__/30-molecules/accordion.hbs
+++ b/src/patterns/__environment__/30-molecules/accordion.hbs
@@ -1,8 +1,8 @@
-<div class="panel">
+<div class="panel{{#if classes}} {{classes}}{{/if}}">
   {{> atoms-input-toggle classes="panel-switch" id=(default id (dashcase (lowercase title))) checked=(default (eq state 'open') false)}}
   <label class="panel-toggle" for="{{default id (dashcase (lowercase title))}}" tabindex="0">
     <span class="panel-title">{{title}}</span>
-    <div class="panel-indicator">{{> tokens-icon id='material-keyboard_arrow_up'}}</div>
+    <div class="panel-indicator">{{> tokens-icon id='material-keyboard_arrow_up' classes=''}}</div>
   </label>
   <div class="panel-content">
     {{> tokens-text markdown=(default markdown false) text=content}}
