--- a/src/patterns/__environment__/10-tokens/heading.hbs
+++ b/src/patterns/__environment__/10-tokens/heading.hbs
@@ -1,1 +1,1 @@
-<h{{level}} class="heading -h{{level}}{{#and alternate (or (eq level 1) (eq level 5))}}-alt{{/and}}{{#if classes}} {{classes}}{{/if}}">{{heading}}</h{{level}}>
+<h{{level}} class="heading -h{{level}}{{#and alternate (or (eq level 1) (eq level 5))}}-alt{{/and}}{{#and hero (eq level 1)}}-hero{{/and}}{{#if classes}} {{classes}}{{/if}}">{{#if icon}}{{> tokens-icon id=icon}} {{/if}}{{heading}}</h{{level}}>
