--- a/src/patterns/__environment__/30-molecules/accordion.hbs
+++ b/src/patterns/__environment__/30-molecules/accordion.hbs
@@ -1,7 +1,7 @@
-<div class="panel{{#if classes}} {{classes}}{{/if}}">
+<div class="panel{{#if classes}} {{classes}}{{/if}}"{{#if filterable}} data-search-id="{{default id (lowercase (dashcase title))}}"{{#if group}} data-search-key:group="{{group}}"{{/if}}{{/if}}>
   {{> atoms-input-toggle classes="panel-switch" id=(default id (dashcase (lowercase title))) checked=(default (eq state 'open') false)}}
   <label class="panel-toggle" for="{{default id (dashcase (lowercase title))}}" tabindex="0">
-    <span class="panel-title">{{title}}</span>
+    <span class="panel-title"{{#if filterable}} data-search-key="title"{{/if}}>{{title}}</span>
     <div class="panel-indicator">{{> tokens-icon id='material-keyboard_arrow_up' classes=''}}</div>
   </label>
   <div class="panel-content">
