--- a/src/patterns/__environment__/60-templates/material.hbs
+++ b/src/patterns/__environment__/60-templates/material.hbs
@@ -1,5 +1,5 @@
 <div class="material-page">
   <header class="material-page-header"></header>
-  {{> organisms-main-material classes="material-page-main"}}
+  {{> organisms-main type="material-page" classes="material-page-main"}}
   <footer class="material-page-footer"></footer>
 </div>
