--- a/src/patterns/__environment__/60-templates/tool.hbs
+++ b/src/patterns/__environment__/60-templates/tool.hbs
@@ -1,5 +1,5 @@
 <div class="tool-page">
   <header class="tool-page-header"></header>
-  {{> organisms-main-tool classes="tool-page-main"}}
+  {{> organisms-main type="tool-page" classes="tool-page-main"}}
   <footer class="tool-page-footer"></footer>
 </div>
