--- a/src/patterns/__environment__/20-atoms/filter~search.hbs
+++ b/src/patterns/__environment__/20-atoms/filter~search.hbs
@@ -66,7 +66,7 @@
     <a @click="cancel"
        @keypress.enter="cancel"
        class="link -underline search-cancel"
-       v-show="fuzzy.searching.searched"
+       v-show="fuzzy && fuzzy.searching.searched"
        tabindex="0">
       Cancel
     </a>
