--- a/src/patterns/__environment__/50-organisms/main.hbs
+++ b/src/patterns/__environment__/50-organisms/main.hbs
@@ -1,3 +1,4 @@
+THIS IS MAIN
 <div class="section-main{{#if type}} -{{type}}{{/if}}{{#if classes}} {{classes}}{{/if}}">
   {{> organisms-intro-alt-text}}
   <main class="section-main-body">
