--- a/src/patterns/__environment__/60-templates/60-templates-generic-home.hbs
+++ b/src/patterns/__environment__/60-templates/60-templates-generic-home.hbs
@@ -1,6 +1,6 @@
-{{!--#extend 'organisms-main'}}
+{{#extend 'organisms-main'}}
   {{#content 'section-main-body'}}
-    THIS MAIN VIA HOME
+    THIS IS MAIN VIA HOME
   {{/content}}
-{{/extend--}}
+{{/extend}}
 {{hello}}
