--- a/src/engine/__environment__/layout/default.hbs
+++ b/src/engine/__environment__/layout/default.hbs
@@ -12,7 +12,11 @@
 </head>
 <body>
   
-  {{template}}
+  <div id="eul-vue">
+  
+    {{template}}
+    
+  </div>
   
   <script src="{{baseUrl}}/js/bundle.min.js"></script>
   
