Adds shutdown error handler

--- a/src/patterns/__environment__/60-templates/60-templates-errors-error-404.hbs
+++ b/src/patterns/__environment__/60-templates/60-templates-errors-error-404.hbs
@@ -1,7 +1,7 @@
 {{#filter __meta__.errors 404 prop='code'}}
-  
-<h1>{{code}} {{status}}</h1>
 
-<p>{{message}}</p>
+<h1 class="heading -h1">{{code}}</h1>
+<p class="text -lead">{{status}}</p>
+<p class="text">{{message}}</p>
 
 {{/filter}}
